--- a/app/composer.json
+++ b/app/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
-        "fideloper/proxy": "^4.4",
+        "doctrine/dbal": "^2.6",
+        "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "1.*"
+        "laravel/ui": "1.*",
+        "nesbot/carbon": "2.31.0"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
